--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --aot=false --build-optimizer=false",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "source-map-explorer": "source-map-explorer dist/oesk-lab/**/*.js",
+    "build-aot": "ng build --aot=true"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.8",
+    "@angular/cdk": "^17.0.4",
     "@angular/common": "^17.0.8",
     "@angular/compiler": "^17.0.8",
     "@angular/core": "^17.0.8",
     "@angular/forms": "^17.0.8",
+    "@angular/material": "^17.0.4",
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "lodash": "^4.17.21",
+    "ng-table-virtual-scroll": "^1.6.0",
     "rxjs": "~7.8.0",
+    "source-map-explorer": "^2.5.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -27,6 +34,7 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.202",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
